# mblog

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
blog/pages/: about.md
blog/posts/aha/: content.md
blog/posts/post-title/: content.md
blog/posts/post-title-2/: content.md
blog/posts/post-title-3/: content.md
client/: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
client/assets/bulma-theme/: _overrides.scss  _variables.scss  theme.scss
client/components/site/: navbar.vue
client/layouts/: default.vue
client/pages/: index.vue
client/pages/page/: _slug.vue
client/pages/post/: _slug.vue
client/plugins/: blog-system.js
src/: main.rs
